fixed minor layout issues with mob

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,6 @@
 .ear-trainer-footer {
   max-width: var(--max-width);
-  margin: clamp(0.7em, 3vh, 1.5em) auto 0 auto;
+  margin: clamp(0.8em, 3vh, 1.5em) auto 0 auto;
   display: flex;
 
   align-items: flex-start;
