--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -458,7 +458,7 @@ label {
 
 .ear-trainer-footer {
   max-width: var(--max-width);
-  margin: clamp(0.7em, 3vh, 1.5em) auto 0 auto;
+  margin: clamp(0.8em, 3vh, 1.5em) auto 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
